fix: 🐛 social icon wrong size on 404 page

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -25,8 +25,8 @@
 }
 
 .social-icons .social-icon svg {
-    height: 50px;
-    width: 50px;
+    height: 32px;
+    width: 32px;
 }
 
 .social-icons .social-icon:hover {
